# bw-engine

./: CMakeLists.txt
include/bw/engine/: application.h  base_object.h  camera.h  engine.h  fps_counter.h  game.h  game_object.h  input.h  render_target.h  time_manager.h
libs/glad-wrap/: CMakeLists.txt
libs/glad-wrap/include/bw/glad/: buffer_masking.h  capabilities.h  glad.h  rasterization.h  texture.h
libs/glad-wrap/include/bw/glad/enums/: boolean.h  pixel_data_internal_format.h  texture_type.h
libs/glad-wrap/include/bw/glad/textures/: texture_3D.h
libs/glfw-wrap/: CMakeLists.txt
src/: application.cpp  engine.cpp  game.cpp  input.cpp
